@@ -1,5 +1,7 @@
 2008-01-11  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/: Cairo::WIN32Surface -> Cairo::Win32Surface.
+
 	* NEWS: added an entry for 1.5.1.
 
 	* extconf.rb: added Quartz backend check for -framework RubyCocoa.
